--- a/app/views/replies/_reply.html.erb
+++ b/app/views/replies/_reply.html.erb
@@ -2,10 +2,10 @@
     <span class="comment">
       <%= reply.comment %>
     </span>
-    <span>
+    <span class="" >
       |
     </span>
-    <span>
+    <span class="post-date" >
     投稿日時:<%= reply.created_at.strftime("%Y-%m-%d %H:%M:%S") %>
     </span>
   </li>
