--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,13 +1,13 @@
 <%= link_to "戻る", blogs_path %>
 <br>
-<span>
+<span class="blog">
   <%= @blog.id %>:
   <%= @blog.body %>
 </span>
-<span>
+<span class="post-date" >
   <%= @blog.created_at.strftime("%Y-%m-%d %H:%M:%S") %>|
 </span>
-<span>
+<span class="like">
   <%= link_to 'いいね！', like_show_path(@blog.id), method: :post %>:
   <%= @blog.like %>
 </span>
