--- a/app/views/replies/_reply.html.erb
+++ b/app/views/replies/_reply.html.erb
@@ -1,8 +1,8 @@
   <li>
-    <span class="comment">
+    <span class="re-comment">
       <%= reply.comment %>
     </span>
-    <span class="" >
+    <span>
       |
     </span>
     <span class="post-date" >
