--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,25 +1,34 @@
-<%= link_to "戻る", blogs_path %>
-<br>
-<span class="blog">
-  <%= @blog.id %>:
-  <%= @blog.body %>
-</span>
-<span class="post-date" >
-  <%= @blog.created_at.strftime("%Y-%m-%d %H:%M:%S") %>|
-</span>
-<span class="like">
-  <%= link_to 'いいね！', like_show_path(@blog.id), method: :post %>:
-  <%= @blog.like %>
-</span>
+<p>
+  <%= link_to "戻る", blogs_path %>
+</p>
+<div class="blog-detail" >
+  <p>
+    <span class="blog-num">
+      <%= @blog.id %>:
+    </span>
+    <span class="post-date" >
+      投稿日時:<%= @blog.created_at.strftime("%Y-%m-%d %H:%M:%S") %>|
+    </span>
+    <span class="like">
+      <%= link_to 'いいね！', like_show_path(@blog.id), method: :post %>:
+      <%= @blog.like %>
+    </span>
+  </p>
+  <p>
+    <span class="blog-show">
+      <%= @blog.body %>
+    </span>
+  </p>
+</div>
 
 
 <%= form_tag replies_path, method: "post" do %>
-  <%= text_area_tag :comment,"" %>
+  <%= text_field_tag :comment,"" %>
   <%= submit_tag "コメントする" %>
 <% end %>
 
 <hr>
 
-<ul class="replies" style="list-style:none;">
+<ul class="replies" >
   <%= render @replies %>
 </ul>
