--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -44,10 +44,22 @@ li {
   margin-bottom: 20px;
 }
 
+.body{
+  font-weight: bold;
+}
+
 .blog-show{
   font-weight: bold;
 }
 
 .blog-show{
   font-size: 0.9em;
+}
+
+.body-field{
+  width: 50%;
+}
+
+.comment-field{
+  width: 50%;
 }
