--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <h1>Mini Blog</h1>
+  <div class="page-header">
+  	<h1>Mini Blog</h1>
+  </div>
 
 <%= yield %>
 
